--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <section class="parallax">
         <h2 id="text">Parallax <br> Website</h2>
-        <img src="/tree-left.png" id="tree-left">
-        <img src="/tree-right.png" id="tree-right">
-        <img src="/gate-left.png" id="gate-left">
-        <img src="/gate-right.png" id="gate-right">
-        <img src="/grass.png" id="grass">
+        <img src="/images/tree-left.png" id="tree-left">
+        <img src="/images/tree-right.png" id="tree-right">
+        <img src="/images/gate-left.png" id="gate-left">
+        <img src="/images/gate-right.png" id="gate-right">
+        <img src="/images/grass.png" id="grass">
     </section>
     <section class="sec">
         <h2>Parallax Scrolling Website</h2>
