File location edited

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <section class="parallax">
         <h2 id="text">Parallax <br> Website</h2>
-        <img src="/images/tree-left.png" id="tree-left">
-        <img src="/images/tree-right.png" id="tree-right">
-        <img src="/images/gate-left.png" id="gate-left">
-        <img src="/images/gate-right.png" id="gate-right">
-        <img src="/images/grass.png" id="grass">
+        <img src="images/tree-left.png" id="tree-left">
+        <img src="images/tree-right.png" id="tree-right">
+        <img src="images/gate-left.png" id="gate-left">
+        <img src="images/gate-right.png" id="gate-right">
+        <img src="images/grass.png" id="grass">
     </section>
     <section class="sec">
         <h2>Parallax Scrolling Website</h2>
@@ -56,7 +56,7 @@
             harum maxime quam at officia aut mollitia officiis iste possimus similique ipsam voluptatum. Alias unde
             tempora voluptates, eligendi incidunt at saepe nobis dignissimos nostrum.</p><br><br>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
