For Re-enabling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="sec">
         <h2>Parallax Scrolling Website</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime doloremque cupiditate, minus optio corporis
-            et unde sunt in quas consequatur temporibus iure neque eveniet sapiente aliquam? At, nemo? Dolorum, quia
+            et unde sunt in quas consequatur tmporibus iure neque eveniet sapiente aliquam? At, nemo? Dolorum, quia
             maiores. Pariatur aliquid molestiae nihil sequi cupiditate incidunt. Rem repellat placeat repellendus eaque
             incidunt itaque ratione numquam delectus molestiae unde fugit ullam veritatis dicta, distinctio
             exercitationem illo dolores, quia officiis tempora nam voluptate! Obcaecati, ut perspiciatis autem laborum
